# Vibe-Trading

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README_UR.md  README_ar.md  README_ja.md  README_ko.md  README_zh.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  tavily_search_tool.py  vercel.json  经验.md
.claude/: settings.json
.cm/: CONTINUITY.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: benchmark.yml  codeql.yml  release.yml  test.yml
agent/: .env.example  SKILL.md  api_server.py  cli.py  mcp_server.py  requirements.txt
agent/backtest/: runner.py  validation.py
agent/cli/: _legacy.py
agent/src/: preflight.py  ui_services.py
agent/tests/: mcp_http_test_helpers.py  test_agent_config.py  test_agent_loop_content_filter.py  test_alpaca_loader.py  test_alpaca_tap_routing.py  test_anthropic_provider.py  test_background_tools.py  test_backtest_workflow.py  test_bash_tool.py  test_bench_parallel.py  test_ccxt_loader_proxy.py  test_channels_runtime.py  test_claude_code_provider.py  test_cli_init.py  test_llm.py  (+51 more)
api/: index.py
autoresearch/: evaluator_contract.md  latest_state.template.json  loop_config.json  program.md  results.template.tsv
backend/: Dockerfile  pyproject.toml
backend/src/: __init__.py  config.py  main.py
backend/src/domain/copytrade/: entities.py  repository.py
backend/src/domain/shared/: entity_id.py  result.py
backend/src/domain/strategy/: entities.py  repository.py
backend/src/infrastructure/backtest/: engine_adapter.py  template_compiler.py
backend/src/infrastructure/persistence/: database.py
backend/src/interface/api/: backtest.py  copytrade.py  router.py  strategy.py
dashboard/: Dockerfile.server  Dockerfile.web  README.md  docker-compose.yml  nginx.conf
deployment/: __init__.py  app.py
docs/: 2026-05-08_mcp_client_integration_roadmap.md  2026-05-25_swarm_mcp_tools_roadmap.md  2026-05-25_swarm_mcp_tools_tdd.md  ARCHITECTURE.md  GLOSSARY.md  TODO.md  trade-attribution-design.md
factor_analysis_results/: group_equity.csv  ic_series.csv  ic_summary.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  vite.config.ts  vitest.config.ts
nginx/: nginx.conf
research/: PIPELINE.md  bear_vs_bull.md  emit_manifest.py  factor_extended.md  factor_extended.py  factor_regime.py  factor_smoke_test.md  factor_smoke_test.py  regime_validate.py  research_config.yaml  setup_bear.py  setup_bear2018.py  setup_ensemble.py  setup_gated.py  setup_lowfreq.py  setup_midfreq.py  setup_oos.py  setup_short_ungated.py  setup_shortonly.py  setup_stress.py  strategy_runs.json  sweep_persistence.py
scripts/: deploy.sh  setup-server.sh
tests/: test_market_sentiment_tool.py  test_validation_cli.py
wiki/: _redirects
(+420 files in other folders)
