[project]
name = "vibe-trading-copy-backend"
version = "0.1.0"
description = "Backend API for Vibe-Trading Copy — quantitative strategy marketplace"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
keywords = ["quantitative", "trading", "backtest", "copy-trade", "strategy"]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.28.0",
    "mypy>=1.10.0",
    "ruff>=0.9.0",
    "pre-commit>=3.7.0",
    "types-python-dateutil",
    "types-requests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests (fast, no network, no DB)",
    "integration: Integration tests (may hit DB or API)",
    "e2e: End-to-end tests (full stack)",
]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-ra",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/config.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
]
fail_under = 70

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "N",   # pep8-naming
    "PL",  # Pylint
    "RUF", # Ruff-specific
]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "B008",   # do-not-call-arg-defaults (FastAPI dependency injection pattern)
    "PLR0913",# too-many-arguments
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["domain", "application", "infrastructure", "interface"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
exclude = [
    "tests/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
